# vulkan-playground

./: .gitignore  CMakeLists.txt  LICENSE  build.bat  clean.bat  renderdoc.cap  run_cmake.bat
jsrlib/: CMakeLists.txt  jsr_bounds.cpp  jsr_bounds.h  jsr_camera.cpp  jsr_camera.h  jsr_filesystem.cpp  jsr_frustum.cpp  jsr_frustum.h  jsr_joblist.cpp  jsr_joblist.h  jsr_joblist_thread.cpp  jsr_joblist_thread.h  jsr_jobsystem.cpp  jsr_jobsystem.h  jsr_jobsystem2.cpp  jsr_jobsystem2.h  jsr_logger.cpp  jsr_logger.h  jsr_math.cpp  jsr_math.h  jsr_memblock.cpp  jsr_memblock.h  jsr_mesh.cpp  jsr_mesh.h  jsr_resources.cpp  jsr_resources.h  jsr_ringbuffer.h  jsr_semaphore.cpp  jsr_semaphore.h  jsr_transient_buffer.cpp  jsr_transient_buffer.h  jsr_worker.cpp  jsr_worker.h
shaders/: brdf.inc  default.frag  default.frag.spv  default.vert.spv  depthPass.frag.spv  depthPass.vert  depthPass.vert.spv  depthpass_v2.frag.spv  depthpass_v2.vert.spv  frag.spv  functions.glsl  globals.inc  light_culling.comp.spv  sinus.comp  sinus.comp.spv  tonemapping.glsl  triangle.frag.spv  triangle.vert.spv  triangle_v2.frag.spv  triangle_v2.vert.spv  vert.spv
shaders/v1/: brdf.glsl  colorConversion.glsl  default.frag  default.vert  depthPass.frag  dither.glsl  doomEthernalHDR.inc  doomEthernalHDR.parms.06] vec  env_brdf.glsl  fog.glsl  functions.glsl  globals.glsl  light.glsl  light_culling.comp  linearDepth.glsl  material.glsl  tonemapping.glsl  triangle.frag  triangle.vert
shaders/v2/: camera.glsl  colorspace.glsl  debug.frag  debug.vert  depthpass_v2.vert  passData.glsl  post.frag  triangle_v2.frag  triangle_v2.vert  triquad.vert  volume.glsl
src/: CMakeLists.txt  bounds.cpp  bounds.h  d2016_fog.cs  d2016_lights.glsl  d2016_ssr.glsl  demo.cpp  demo.h  demo_utils.cpp  det_rec2020.cs  frustum.cpp  frustum.h  gltf_loader.cpp  gltf_loader.h  jobsys.cpp  jobsys.h  light.h  mesh_data.h  pch.h  sample1.cpp  sample1.h  sample2.cpp  sample2.h  vertex.h  world.cpp  world.h
src/backend/: vk.h  vk_backend.cpp  vk_backend.h  vk_barrier.cpp  vk_barrier.h  vk_buffer.cpp  vk_buffer.h  vk_check.h  vk_command_buffer.cpp  vk_command_buffer.h  vk_command_pool.cpp  vk_command_pool.h  vk_device.cpp  vk_device.h  vk_initializers.cpp  vk_initializers.h  vk_pipeline.cpp  vk_pipeline.h  vk_render_backend.cpp  vk_render_backend.h  vk_resources.cpp  vk_resources.h  vk_shader_filemgr.cpp  vk_shader_filemgr.h  vk_vertex.cpp  vk_vertex.h
src/common/: resource_container.h  resource_descriptions.h  resource_handles.h  vertex.h
src/renderer/: Bounds.cpp  Bounds.h  Camera.cpp  Camera.h  ConstPool.h  FrameCounter.cpp  FrameCounter.h  Frustum.cpp  Frustum.h  Material.h  Pipeline.h  RenderFrontend.cpp  RenderFrontend.h  ResourceDescriptions.h  ResourceHandles.h  Resources.h  Vertex.cpp  Vertex.h  VulkanBarrier.cpp  VulkanBarrier.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanDevice.cpp  VulkanDevice.h  VulkanImage.cpp  VulkanImage.h  VulkanInitializers.cpp  VulkanInitializers.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTechnic.cpp  VulkanTechnic.h  Window.cpp  Window.h  gli_utils.h
src/renderer/pipelines/: CompImageGen.cpp  CompImageGen.h  DepthPrePass.cpp  DepthPrePass.h  ForwardLightingPass.cpp  ForwardLightingPass.h
src/renderer/technics/: DefaultTechnic.cpp  DefaultTechnic.h  DepthPassTechnic.cpp  DepthPassTechnic.h  TestCompTechnic.cpp  TestCompTechnic.h
vkjs/: CMakeLists.txt  VulkanInitializers.hpp  appbase.cpp  appbase.h  buffer.cpp  buffer.h  device.cpp  device.h  gli_utils.cpp  gli_utils.h  image.cpp  image.h  pipeline.cpp  pipeline.h  shader_module.cpp  shader_module.h  span.h  spirv_utils.cpp  spirv_utils.h  swapchain.cpp  swapchain.h  types.h  vertex.h  vk_descriptors.cpp  vk_descriptors.h  vk_types.h  vkcheck.h  vkjs.h
